# dolfinx_hdg

./: .gitignore  CMakeLists.txt  README.md
cpp/: CMakeLists.txt  Config.cmake.in  assemble_matrix_impl.h  assemble_vector_impl.h  assembler.h  assembler_helpers.cpp  assembler_helpers.h  hello.cpp  hello.h  main.cpp  petsc.cpp  petsc.h  static_condensation_helpers.cpp  static_condensation_helpers.h  utils.cpp  utils.h
python/: CMakeLists.txt  setup.py  wrapper.cpp
python/demo/: hdg_poisson.py  hdg_stokes.py  plot_scaling.py  utils.py
python/dolfinx_hdg/: assemble.py  hello.py  sc.py  wrapper.cpp
python/test/: test_assemble_matrix.py  test_assembler.py
